<resources>
    <string name="app_name">Fahrtenbuch</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cars_overview">Select Car</string>
    <string name="title_activity_register">Register new account</string>
    <string name="title_activity_trips_overview">Trips overview</string>
    <string name="nfc_activate_button">connect to car with NFC</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="button_start_ride">Start Ride</string>
    <string name="button_show_rides">Show Rides</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_car_add">Add Car</string>
    <string name="new_car_saved">New car saved in database</string>
    <string name="saving_failed">"Saving failed: "</string>
    <string name="textfield_make">Make</string>
    <string name="textfield_modell">Model</string>
    <string name="textfield_number">Number Plate</string>
    <string name="textfield_kilometer">Current Mileage</string>
    <string name="textview_add_user">+ Add new User…</string>
    <string name="header_entitledUser">Entitled User</string>
    <string name="button_nfc">add NFC-tag</string>
    <string name="save_label">SAVE</string>
    <string name="action_export">EXPORT</string>
    <string name="msg_nfcon">Turn on NFC to connect with a car with a NFC-Tag</string>
    <string name="nfc_not">"NFC doesn\'t work "</string>
    <string name="toast_message_add_new_nfc">read NFC-tag successfully</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_title_nfcReadIn">Read in NFC tag</string>
    <string name="dialog_text_nfcReadIn">Hold device to the NFC-tag to read in the id of it</string>
    <string name="dialog_title_savaMissing">Not completed!</string>
    <string name="dialog_text_saveMissing">Textfields are not completely filled.\nDo you want to fill it out or discard it?</string>
    <string name="dialog_saveMissing_fillout">Fill out</string>
    <string name="dialog_saveMissing_drop">Discard</string>
    <string name="dialog_title_addUser">Add entitled user</string>
    <string name="_dialog_text_addUser">Enter the username, to give the user authorisation for the car</string>
    <string name="dialog_cancle_button">Cancel</string>
    <string name="button_nfc_change">Change NFC tag</string>
    <string name="dialog_title_noNFC">Not found</string>
    <string name="dialog_text_noNFC">Car with the NFC-id does not exist, or user isn\'t qualified for this car</string>
    <string name="button_add_car">Add new car</string>
    <string name="dialog_title_exitWithoutSaving">Exit without saving!</string>
    <string name="dialog_text_exitWithoutSaving">Do you really want to exit without saving changes?</string>
    <string name="authenticating">Authenticating…</string>
    <string name="hello">"Hello "</string>
    <string name="wrong_username_or_password">Wrong username or password!</string>
    <string name="no_connection_to_the_server">No connection to the server!</string>
    <string name="error">Error</string>
    <string name="error_dots">"Error: "</string>
    <string name="at_least_6_characters">at least 6 characters</string>
    <string name="must_not_contain_spaces">must not contain spaces</string>
    <string name="password_not_confirmed">password not confirmed</string>
    <string name="please_enter_your_first_name">please enter your first name</string>
    <string name="please_enter_your_last_name">please enter your last name</string>
    <string name="invalid_input">invalid input</string>
    <string name="creating_new_account">Creating new account…</string>
    <string name="loading">Loading…</string>
    <string name="exporting">Exporting…</string>
    <string name="saving">Saving…</string>
    <string name="exporting_successful">Exporting successful.</string>
    <string name="exporting_failed">Exporting failed.</string>
    <string name="fahrtenbuch_export">Fahrtenbuch-Export:</string>
    <string name="an_overview_of_the_trips_of_the_car">An overview of the trips of the car</string>
    <string name="is_attached_to_this_mail">is attached to this mail!</string>
    <string name="title_activity_car_settings">Car settings</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="kilometer_short">" km"</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disabled_gps">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="enabled_gps">GPS is Enabled in your device</string>
    <string name="feedback">Feedback</string>
    <string name="ins_description">Insert a description!</string>
    <string name="cho_feedback">Choose feedback!</string>
    <string name="trip_sav">Trip saved</string>
    <string name="sav_trip">Save trip</string>
    <string name="only_admin">Only the admin is allowed to edit trips!</string>
    <string name="edit_trip">"Edit trip of "</string>
    <string name="description">Description: </string>
    <string name="mileage">"Mileage: "</string>
    <string name="driver">"Driver: "</string>
    <string name="weather">"Weather: "</string>
    <string name="feecback_dots">"Feedback: "</string>
    <string name="distance">"Distance: "</string>
    <string name="info">Turn on NFC</string>
    <string name="turn_on">Turn on</string>
    <string name="close">Close</string>
    <string name="try_user">Try to add user…</string>
    <string name="error_input">Error: no input.</string>
    <string name="add_usr">"Add user "</string>
    <string name="success">" successfully"</string>
    <string name="del">Delete</string>
    <string name="del_usr">Delete user</string>
    <string name="del_usr_sure">Do you really want to delete the user?</string>
    <string name="del_dots">Deleting…</string>
    <string name="del_usr_success">User deleted successfully</string>
    <string name="register_new_acc">Register new account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="conf_passw">Confirm password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="birth">Birthday</string>
    <string name="register">Register</string>
    <string name="mil_wrong">Wrong mileage!</string>
    <string name="car_settings">Car Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="logout">Logout</string>
    <string name="text_username">Username:</string>
    <string name="text_lastname">Last Name:</string>
    <string name="text_birthday">Birthday:</string>
    <string name="textview_changepwd">Change Password</string>
    <string name="text_firstname">Fristname:</string>
    <string name="title_activity_activity_user_settings">User Settings</string>
    <string name="user_settings_header">User Account</string>
    <string name="user_change">Change user successfully</string>
    <string name="change_pwd">Change Password</string>
    <string name="current_pwd_text">Enter current password:</string>
    <string name="current_pwd">current password:</string>
    <string name="wrong_password">Wrong password</string>
    <string name="change_pwd_text">Enter new password</string>
    <string name="edit">EDIT</string>
    <string name="dialog_title_saveBeforeAddUser">Save car in database</string>
    <string name="dialog_text_saveBeforeAddUser">Before adding a new user, you have to save the car in database</string>
    <string name="impossible_to_add_user">impossible to add a qualified user</string>
    <string name="impossible_birthday">Birthday isn\'t in valid scope</string>
</resources>
