<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.fhooe.mc.fahrtenbuch.CarAddActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_newCar">

        <include layout="@layout/layout_header"
            android:id="@+id/header_currentUser" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="5dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textfield_make"
                    android:layout_gravity="left|center_vertical"
                    android:hint="@string/textfield_make"
                    android:inputType="textPersonName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textfield_model"
                    android:layout_gravity="left|center_vertical"
                    android:hint="@string/textfield_modell"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textfield_number"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/textfield_number"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/textfield_kilometers"
            android:hint="@string/textfield_kilometer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_nfc"
            android:id="@+id/button_nfc" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearlayout_user"
        android:layout_below="@+id/linearlayout_newCar"
        android:layout_marginTop="10pt">
        <include layout="@layout/layout_header"
            android:id="@+id/header_entitledUser" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textview_add_user"
            android:textSize="25dp"
            android:id="@+id/action_add_new_user" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listEnabledUser" />

    </LinearLayout>

</RelativeLayout>
