<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.fhooe.mc.fahrtenbuch.CarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start_ride"
            android:id="@+id/button_start_ride"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3pt"
            android:layout_marginTop="3pt" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_show_rides"
            android:id="@+id/button_show_rides"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3pt"
            android:layout_marginBottom="3pt" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:id="@+id/button_car_settings"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3pt"
            android:layout_marginBottom="3pt" />
    </LinearLayout>
</RelativeLayout>
