<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.fhooe.mc.fahrtenbuch.UserSettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_useraccount">

        <include layout="@layout/layout_header"
            android:id="@+id/header_UserSettings_currentUser" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MyTableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_username"
                    android:id="@+id/textView8"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp" />

                <EditText android:id="@+id/usersettings_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|text"
                    android:layout_weight="1"
                    android:enabled="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MyTableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_firstname"
                    android:id="@+id/textView9"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/usersettings_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MyTableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_lastname"
                    android:id="@+id/textView10"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/usersettings_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MyTableRow"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_birthday"
                    android:id="@+id/textView11"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Birthday"
                    android:id="@+id/usersettings_birthday"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="3dp"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearlayout_password"
        android:layout_below="@+id/linearlayout_useraccount">

        <include layout="@layout/layout_header"
            android:id="@+id/header_UserSettings_password" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/action_changepwd">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textview_changepwd"
                android:textSize="20dp"
                android:id="@+id/textfield_changepwd"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ic_action_navigation_chevron_right"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
